# g11n

./: .gitignore  .hgignore  .hgtags  Makefile  Makefile.buildnum  Makefile.master  Makefile.targ  README  README.opensolaris.g11n  g11n-downloads.sh
pending/pkgmaps/: prototype.0mp  prototype.hkleu  prototype.hkleu.sparc  prototype.hleu  prototype.hleu.sparc  prototype.jfpu.sparc  prototype.kleu  prototype.kleu.sparc  prototype.lcl  prototype.lcl.i386  prototype.lcl.sparc
pkg/: Makefile  l10n-extra.mf  l10n-incorporation.mf  l10n-redist.mf
pkg/license_files/: copyright.anthyle  copyright.arabeyes  copyright.arphicfont  copyright.bpg-georgian  copyright.corefonts  copyright.ddu-l10n  copyright.indic-fonts-core  copyright.ipafont  copyright.kacst  copyright.keybrdlayouts  copyright.lohit  copyright.man-l10n  copyright.mgopen  copyright.mp  copyright.omron  copyright.sunpinyin  copyright.unfonts  copyright.unicode  copyright.unicode+icu  copyright.unifont  copyright.wqy-zenhei
pkg/manifests/: diagnostic-ddu-locale.mf  locale-ja.mf  network-dhcp-dhcpmgr-locale-cs.mf  network-dhcp-dhcpmgr-locale-de.mf  network-dhcp-dhcpmgr-locale-es.mf  network-dhcp-dhcpmgr-locale-fr.mf  network-dhcp-dhcpmgr-locale-it.mf  network-dhcp-dhcpmgr-locale-ja.mf  network-dhcp-dhcpmgr-locale-ko.mf  network-dhcp-dhcpmgr-locale-sv.mf  network-dhcp-dhcpmgr-locale-zh_cn.mf  network-dhcp-dhcpmgr-locale-zh_hk_tw.mf  print-mp.mf  system-font-truetype-arabeyes.mf  system-font-truetype-arphic-ukai.mf  system-font-truetype-arphic-uming.mf  system-font-truetype-bpg-georgian.mf  system-font-truetype-fonts-core.mf  system-font-truetype-gentium.mf  system-font-truetype-hanyang-ko-core.mf  system-font-truetype-hanyang-ko.mf  system-font-truetype-indic-fonts-core.mf  system-font-truetype-ipafont-mincho.mf  system-font-truetype-ipafont.mf  system-font-truetype-kacst.mf  system-font-truetype-lohit.mf  system-font-truetype-mgopen.mf  system-font-truetype-sil.mf  system-font-truetype-thai-scalable.mf  system-font-truetype-unfonts-ko-core.mf  system-font-truetype-unfonts-ko-extra.mf  system-font-truetype-unifont.mf  system-font-truetype-wqy-zenhei.mf  system-input-method-iiim-anthy.mf  system-input-method-iiim-atok.mf  system-input-method-iiim-cle-core.mf  system-input-method-iiim-cle-open.mf  system-input-method-iiim-cle-sunpinyin.mf  system-input-method-iiim-hkle-core.mf  system-input-method-iiim-hkle-open.mf  (+40 more)
pkg/manifests_cluster/: system-locale-support-afrikaans.mf  system-locale-support-albanian.mf  system-locale-support-all.mf  system-locale-support-arabic.mf  system-locale-support-armenian.mf  system-locale-support-assamese.mf  system-locale-support-azerbaijani.mf  system-locale-support-belarusian.mf  system-locale-support-bengali.mf  system-locale-support-bosnian.mf  system-locale-support-bulgarian.mf  system-locale-support-catalan.mf  (+61 more)
pkg_import/: Makefile  g11nsvc.i386.tar  g11nsvc.sparc.tar  import_list  system:input-method:library:m17n  system:input-method:scim
pkg_merge/: mergearch.sh  mergespec.sh
pkgmaps/: Makefile  prototype.0ladm  prototype.1251f  prototype.5ttf  prototype.JSatsvr  prototype.JSatsvu  prototype.JSatsvu.i386  prototype.JSatsvu.sparc  prototype.ale  prototype.ale.i386  prototype.ale.sparc  prototype.arrf  prototype.auaos  prototype.auaos.i386  prototype.auaos.sparc  prototype.auaow  prototype.autoef  prototype.autoef.i386  prototype.autoef.sparc  prototype.camos  prototype.camos.i386  prototype.camos.sparc  prototype.camow  prototype.ceuos  prototype.ceuos.i386  prototype.ceuos.sparc  prototype.ceuow  prototype.ciu8  prototype.ciu8.i386  prototype.ciu8.sparc  prototype.cleu  prototype.cleu.i386  prototype.cleu.sparc  prototype.cleu2  prototype.cleu2.i386  prototype.cleu2.sparc  prototype.cos  prototype.csdhcm  prototype.csos  prototype.ctpls  (+544 more)
src/: Makefile  Makefile.targ
src/cmd/fsexam/: AUTHORS  BUILD  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  fsexam.sol.spec  fsexam.spec  fsexam.spec.in  todo
src/cmd/fsexam/data/: GNOME_Fsexam.server.in  Makefile  Makefile.am  fsexam.desktop  fsexam.desktop.in  fsexam.schemas  fsexam.schemas.in
src/cmd/fsexam/help/: Makefile.am
src/cmd/fsexam/help/C/: Makefile.am  fsexam-C.omf  fsexam.xml
src/cmd/fsexam/help/de/: Makefile.am  fsexam-de.omf  fsexam.xml
src/cmd/fsexam/help/es/: Makefile.am  fsexam-es.omf  fsexam.xml
src/cmd/fsexam/help/fr/: Makefile.am  fsexam-fr.omf  fsexam.xml
src/cmd/fsexam/help/it/: Makefile.am  fsexam-it.omf  fsexam.xml
src/cmd/fsexam/help/ja/: Makefile.am  fsexam-ja.omf  fsexam.xml
src/cmd/fsexam/help/ko/: Makefile.am  fsexam-ko.omf  fsexam.xml
src/cmd/fsexam/help/pt_BR/: Makefile.am  fsexam-pt_BR.omf  fsexam.xml
src/cmd/fsexam/help/sv/: Makefile.am  fsexam-sv.omf  fsexam.xml
src/cmd/fsexam/help/zh_CN/: Makefile.am  fsexam-zh_CN.omf  fsexam.xml
src/cmd/fsexam/help/zh_HK/: Makefile.am  fsexam-zh_HK.omf  fsexam.xml
src/cmd/fsexam/help/zh_TW/: Makefile.am  fsexam.xml
src/cmd/fsexam/pixmaps/: Makefile  Makefile.am
src/cmd/fsexam/po/: ChangeLog  Makefile  POTFILES  POTFILES.in  cs.po  de.po  es.po  fr.po  fsexam.pot  hu.po  it.po  ja.po  ko.po  pl.po  pt_BR.po  ru.po  sv.po  zh_CN.po  zh_HK.po  zh_TW.po
src/cmd/fsexam/src/: GNOME_Fsexam.idl  Makefile  Makefile.am  auto-detect.c  auto-detect.h  callbacks.c  callbacks.h  encode.h  encoding.c  encoding.h  file-filter.c  file-filter.h  file-validate.c  file-validate.h  fsexam-accels.h  fsexam-application-server.c  fsexam-application-server.h  fsexam-content.c  fsexam-content.h  fsexam-convcontent.c  fsexam-convcontent.h  fsexam-conversion.c  fsexam-conversion.h  fsexam-convname.c  fsexam-convname.h  fsexam-debug.c  fsexam-debug.h  fsexam-dialog.c  fsexam-dialog.h  fsexam-dnd.c  fsexam-dnd.h  fsexam-dryrun.c  fsexam-dryrun.h  fsexam-encoding-dialog.c  fsexam-encoding-dialog.h  fsexam-error.c  fsexam-error.h  fsexam-header.h  fsexam-helper.c  fsexam-helper.h  (+24 more)
tools/: Run.sh  create_links.sh  create_tarballs.sh  generatelocaledef  localedef.sh  translate_charmap.pl  unpack-archive  update_fonts_cache.sh
(+3869 files in other folders)
