-*- mode: autoconf -*-
# 
# CDDL HEADER START
# 
# The contents of this file are subject to the terms of the
# Common Development and Distribution License (the "License").
# You may not use this file except in compliance with the License.
# 
# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
# or http://www.opensolaris.org/os/licensing.
# See the License for the specific language governing permissions
# and limitations under the License.
# 
# When distributing Covered Code, include this CDDL HEADER in each
# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
# If applicable, add the following below this CDDL HEADER, with the
# fields enclosed by brackets "[]" replaced with your own identifying
# information: Portions Copyright [yyyy] [name of copyright owner]
# 
# CDDL HEADER END
# 

# 
# Copyright 2008 Sun Microsystems, Inc. All rights reserved.
# Use is subject to license terms.
#

AC_PREREQ(2.52)

m4_define(fsexam_version, 0.8.1)
m4_define(gnomevfs_minver, 2.0.0)
m4_define(xft_minver, 2.0.0)
m4_define(gtk_minver, 2.0.0)
m4_define(libbonobo_minver, 2.0.0)
m4_define(libgnomeui_minver, 2.1.90)

AC_INIT([fsexam], [fsexam_version])
AC_CONFIG_SRCDIR([src/fsexam.c])
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(fsexam, fsexam_version)

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC

AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
AC_SUBST(ORBIT_IDL)

LIBBONOBO_IDL="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
AC_SUBST(LIBBONOBO_IDL)

BONOBO_ACTIVATION_IDL="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
AC_SUBST(BONOBO_ACTIVATION_IDL)

dnl get rid of the -export-dynamic stuff from the configure flags ...
export_dynamic=`(./libtool --config; echo eval echo \\$export_dynamic_flag_spec) | sh`

PKG_CHECK_MODULES(FSEXAM,
        [gnome-desktop-2.0 >= 2.0 \
        gnome-vfs-module-2.0 >= 2.0 \
        eel-2.0 >= 2.2.3])

PKG_CHECK_MODULES(DUMMY, 
        [glib-2.0 >= 2.8], 
        [],
        [AC_DEFINE(HAVE_NO_GLIB_2_8, 
                   [],
                   [glib-2.0 version is higher than 2.8])])

dnl add cflags for dealing large files
LFS_CFLAGS=`getconf LFS_CFLAGS`
CFLAGS="$CFLAGS $LFS_CFLAGS"

AC_SUBST(FSEXAM_CFLAGS)
AC_SUBST(FSEXAM_LIBS)

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
if test "x$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable not found.  Should be installed with GConf])
fi
AM_GCONF_SOURCE_2

dnl Checks for i18n
ALL_LINGUAS="cs de es fr hu it ja ko pl pt_BR ru sv zh_CN zh_HK zh_TW"
GETTEXT_PACKAGE=fsexam
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
                   [domain used for gettext() calls])

AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(FSEXAM_LOCALEDIR, "${ac_default_prefix}/share/locale", [Locale directory])
else
  AC_DEFINE_UNQUOTED(FSEXAM_LOCALEDIR, "${prefix}/share/locale", [Locale directory])
fi

dnl Checks for auto_ef
AC_CHECK_HEADERS([auto_ef.h], 
        [AC_CHECK_LIB([auto_ef], auto_ef_file,
            [AUTOEF_LIBS="-lauto_ef"],
            AC_MSG_WARN([cannot find auto_ef library]))],
        AC_MSG_WARN([cannot find auto_ef header]))

AC_SUBST(AUTOEF_LIBS)

dnl Checks for strlcpy and strlcat
AC_CHECK_FUNCS([strlcpy])
AC_CHECK_FUNCS([strlcat])

dnl add debugging options ...
changequote(,)dnl
if test "x$GCC" = xyes; then
  case " $CFLAGS " in
  *[\	\ ]-Wall[\	\ ]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac

  case " $CFLAGS " in
  *[\	\ ]-std=c9x[\	\ ]*) ;;
  *) CFLAGS="$CFLAGS -std=c9x" ;;
  esac
fi
changequote([,])dnl

AC_OUTPUT([
Makefile
src/Makefile
data/Makefile
pixmaps/Makefile
po/Makefile.in
help/Makefile
help/C/Makefile
help/de/Makefile
help/es/Makefile
help/fr/Makefile
help/it/Makefile
help/ja/Makefile
help/ko/Makefile
help/pt_BR/Makefile
help/sv/Makefile
help/zh_CN/Makefile
help/zh_HK/Makefile
help/zh_TW/Makefile
])
